// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Edge Cases for Ulfsild's Contingency should handle Ulfsild's Contingency with no detected scripts 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Ulfsild's Contingency"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1upilqn"
    >
      <div
        class="MuiStack-root css-14irx59-MuiStack-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-pdgy6c-MuiTypography-root"
        >
          Grimoire: 
          Ulfsild's Contingency
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1so4hfi-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Unknown
             (
            unknown
            )
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-12s7ml7-MuiTypography-root"
          >
            50
            % match confidence
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1g9mk0o-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrncdp-MuiTypography-root"
          >
            No signature script detected
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-kh764n-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        />
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      A contingency effect.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Edge Cases for Ulfsild's Contingency should handle different focus script (Healing instead of Damage Shield) 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Ulfsild's Contingency"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1upilqn"
    >
      <div
        class="MuiStack-root css-14irx59-MuiStack-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-pdgy6c-MuiTypography-root"
        >
          Grimoire: 
          Ulfsild's Contingency
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1so4hfi-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Healing Contingency
             (
            focus
            )
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-12s7ml7-MuiTypography-root"
          >
            95
            % match confidence
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1g9mk0o-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Gladiator's Tenacity
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-12s7ml7-MuiTypography-root"
          >
            Evidence: 
            Consistent healing pattern detected
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-kh764n-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-qqf3vu-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Tenacious Contingency (12)
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      A healing contingency effect.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Ulfsild's Contingency with Gladiator's Tenacity and Damage Shield should handle error state for Ulfsild's Contingency 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Ulfsild's Contingency"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      Error loading scribing data.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Ulfsild's Contingency with Gladiator's Tenacity and Damage Shield should handle loading state for Ulfsild's Contingency 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Ulfsild's Contingency"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      Loading scribing data...
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Ulfsild's Contingency with Gladiator's Tenacity and Damage Shield should render Ulfsild's Contingency tooltip with Gladiator's Tenacity signature script 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Ulfsild's Contingency"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-hljinv"
    >
      <div
        class="MuiBox-root css-1o3fvql"
      >
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-1f91ic5"
          >
            4320 Magicka
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            Self
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Duration
          </span>
          <span
            class="MuiBox-root css-johkra"
          >
            Conditional
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1upilqn"
    >
      <div
        class="MuiStack-root css-14irx59-MuiStack-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-pdgy6c-MuiTypography-root"
        >
          Grimoire: 
          Ulfsild's Contingency
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1so4hfi-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Healing Contingency
             (
            focus
            )
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1g9mk0o-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Gladiator's Tenacity
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-12s7ml7-MuiTypography-root"
          >
            Evidence: 
            Analyzed 6 casts, Found 1 consistent effects, Top effect: buff ID 217654 (24/6 casts), buff 217654: 24 occurrences
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-kh764n-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-qqf3vu-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Tenacious Contingency (24)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-qqf3vu-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Warding Contingency (24)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-qqf3vu-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Ulfsild's Contingency (5)
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      Create a magical contingency that activates when you take damage, applying a powerful effect. The nature of the contingency depends on the focus script selected.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Ulfsild's Contingency with Gladiator's Tenacity and Damage Shield should render Ulfsild's Contingency with only signature script (no focus detection) 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Ulfsild's Contingency"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-hljinv"
    >
      <div
        class="MuiBox-root css-1o3fvql"
      >
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-1f91ic5"
          >
            4320 Magicka
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1upilqn"
    >
      <div
        class="MuiStack-root css-14irx59-MuiStack-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-pdgy6c-MuiTypography-root"
        >
          Grimoire: 
          Ulfsild's Contingency
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1so4hfi-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Gladiator's Tenacity
             (
            signature
            )
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1g9mk0o-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Gladiator's Tenacity
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-12s7ml7-MuiTypography-root"
          >
            Evidence: 
            Analyzed 6 casts, Top effect: buff ID 217654 (24/6 casts)
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-kh764n-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-qqf3vu-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Tenacious Contingency (24)
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      A contingency effect that activates under certain conditions.
    </p>
  </div>
</div>
`;
